--- a/new-movie-database/src/components/Navigation.module.css
+++ b/new-movie-database/src/components/Navigation.module.css
@@ -73,7 +73,7 @@
 .dropdownContent {
     display: none;
     position: absolute;
-    right: 0;
+    right: -16px;
     top: 100%;
     background-color: #333;
     min-width: 200px;
